# vcf_analysis

./: .coveragerc  .gitignore  .pre-commit-hooks.yaml  APACHE_IGGY_IMPLEMENTATION_PLAN.md  CHANGELOG.md  CODEBASE_STREAMLINING_SUMMARY.md  KUZU_SCHEMA_FIX_SUMMARY.md  LICENSE  LOAD_TESTING_SESSION_SUMMARY.md  MEMORY_OPTIMIZATION_GUIDE.md  PHASE5_2_ARCHITECTURE_SUMMARY.md  PRD -  VCF Analysis Agent.md  PRIORITY_2_ACHIEVEMENTS.md  PROJECT_STATUS.md  README.md  SAMPLE_DATA_AUDIT_REPORT_2025-05-29.md  SESSION_SUMMARY_2025-05-29.md  VCFv4.2.md  VCFv4.2.txt  docker-compose.production.yml  docker-compose.yml  mkdocs.yml  orbstack.yaml  prometheus.yml  prompt_contracts_demo_results.json  pyproject.toml  pytest.ini  quick_load_test.py  requirements.txt  run_load_tests.py  test_prompt_contracts_demo.py
docs/: CLI_DOCUMENTATION_STYLE_GUIDE.md  DEVELOPER_GUIDE.md  DOCKER.md  MEMORY_OPTIMIZATION_FEATURES.md  TESTING.md
golden/: HG00098.stats.txt  README.md
kuzu_db/: catalog.kz  metadata.kz
performance_reports/: PHASE1_MEMORY_OPTIMIZATION_REPORT.md  README.md  comprehensive_test_results_20250528_104044.json  dual_database_performance_analysis.md  load_test_results.json  memory_profiling_analysis.md  optimization_recommendations.md  optimization_report_20250528_103729.json  optimization_report_20250528_103904.json  performance_analysis_20250528_102816.json  performance_analysis_20250528_103620.json  performance_analysis_20250528_103838.json  vcf_load_test_1748449531.json
prompts/: README.md  vcf_analysis_summary_v1.yaml  vcf_comparison_v1.yaml  vcf_summarization_v1.yaml
sample_test_data/: README.md  chr_map.txt  empty_alt.vcf.gz.tbi  inconsistent_format.vcf.gz.tbi  minimal.vcf.gz.tbi  missing_header_field.vcf.gz.tbi  multiallelic.vcf.gz.tbi  nonstandard_chrom.vcf.gz.tbi  symbolic_allele.vcf.gz.tbi
scripts/: batch_compliance_check.py  build.sh  cli_documentation_style_guide.py  cli_enhanced_validation.py  comprehensive_testing.py  demo_phase5_iggy.py  docker-build.sh  generate_golden_files.py  memory_optimization.py  optimization_report.py  performance_analysis.py  run.sh  run_metrics_server_simulation.py  test-documentation.py  validate_cli_documentation.py  validate_phase5_2.py
security-reports/: README.md  bandit-report.json  pip-audit-report.json  safety-report.json
tests/: __init__.py  conftest.py  test_agent.py  test_agent_llm_integration.py  test_ai_analysis.py  test_api_clients.py  test_bcftools_integration.py  test_bcftools_mocked.py  test_cli_documentation.py  test_edgecase_compliance.py  test_golden_files.py  test_golden_output.py  test_lancedb_concurrency.py  test_lancedb_integration.py  test_prompt_templates.py  test_samspec_compliance.py  test_validation.py  test_validation_edge_cases.py  test_validation_property.py  test_vcf_comparison_tool.py  (+2 more)
(+161 files in other folders)
